[package]
name = "reign"
version = "0.2.1"
authors = [
	"Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"
]
edition = "2018"
description = "Opinionated Fullstack Web Framework in Rust"
repository = "https://github.com/pksunkara/reign"
keywords = ["fullstack", "web", "framework", "reign"]
categories = ["web-programming"]
license = "MIT OR Apache-2.0"
readme = "README.md"
autoexamples = false

[lib]
name = "reign"
path = "src/lib.rs"

[dependencies]
# lib deps
reign_derive = { path = "./reign_derive", version = "0.2.0", optional = true }
reign_view = { path = "./reign_view", version = "0.2.0", optional = true }

[dev-dependencies]
version-sync = "0.9.3"

[workspace]
members = [
	".",
	"reign_derive",
	"reign_view",
]
default-members = [
	".",
	"reign_derive",
	"reign_view",
]

[features]
default = ["view"]
view = ["reign_view", "reign_derive/view"]

[package.metadata.docs.rs]
all-features = true
