[package]
name = "reign_derive"
version = "0.2.1"
authors = [
	"Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"
]
edition = "2018"
description = "Opinionated Fullstack Web Framework in Rust"
repository = "https://github.com/pksunkara/reign"
keywords = ["fullstack", "web", "framework", "reign"]
categories = ["web-programming"]
license = "MIT"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.76", features = ["full"] }
quote = "1.0.9"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.29"
regex = { version = "1.4.3", optional = true }
Inflector = { version = "0.11.4", optional = true }
once_cell = { version = "1.7.2", optional = true }
serde_json = { version = "1.0.68", optional = true }

[features]
default = ["view"]
view = ["regex", "Inflector", "once_cell"]

[package.metadata.docs.rs]
all-features = true
